--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,22 +12,14 @@ on:
 jobs:
   build:
     name: Lint
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        type: [debug, release]
+    runs-on: ubuntu-22.04
+    container: verilator/verilator:v5.018
     steps:
 
     - uses: actions/checkout@v3
       with:
         submodules: recursive 
 
-    - name: Install verilator
-      run: |
-        sudo apt-get install -y verilator
-        echo $(verilator --version)
-
     - name: Lint
-      run: |
-        make lint
+      shell: bash
+      run: make lint
