fix dp makefile.

--- a/testbench/verilator/DP/Makefile
+++ b/testbench/verilator/DP/Makefile
@@ -15,18 +15,15 @@ ifeq ($(STAGE), SRCOPRMANAGER)
 	TEST := SrcOprManager
 	TESTBENCH := DP/src_opr_manager_tb
 	WAVE := src_opr_manager.vcd
-endif
-ifeq ($(STAGE), ARF)
+else ifeq ($(STAGE), ARF)
 	TEST := Arf
 	TESTBENCH := DP/arf_tb
 	WAVE := arf.vcd
-endif
-ifeq ($(STAGE), RRF)
+else ifeq ($(STAGE), RRF)
 	TEST := Rrf
 	TESTBENCH := DP/rrf_tb
 	WAVE := rrf.vcd
-endif
-ifeq ($(STAGE), RRF_ALLO)
+else ifeq ($(STAGE), RRF_ALLO)
 	TEST := RrfEntryAllocate
 	TESTBENCH := DP/rrfentry_allocate_tb
 	WAVE := rrfentry_allocate.vcd
@@ -37,9 +34,7 @@ VIGNOREW 	:=
 VINCULDES	:= -I../../../rtl/ -I../../../rtl/core/DP/
 VFLAGS 		:= --trace --x-assign unique --x-initial unique $(VIGNOREW) $(VINCULDES)
 PFLAGS		:= -GREQ_LEN=4 -GGRANT_LEN=2
-# IFLGAS		:=  -I../testbench/verilator  -I../3rd-party/fmt/include
 IFLGAS		:=  -I../testbench/verilator 
-# LDFLAGS		:= -LDFLAGS ../3rd-party/fmt/build/libfmt.a
 MACRO_FLAGS :=  -DFMT_HEADER_ONLY
 
 # Format
