Add InorderAllocIssueUnit testbench.

--- a/testbench/verilator/SW/Makefile
+++ b/testbench/verilator/SW/Makefile
@@ -1,10 +1,8 @@
 CXX		:= g++
-
-
-RTLD	?= ../../../rtl/core/SW
-RTLOBJD	:= ../../../build
-TESTBENCHD	:= ../
 VERILATOR := verilator
+RTLD	?= ../../../rtl/core/SW
+RTLOBJD	:= build
+TESTBENCHD	:= ../../../testbench/verilator/SW
 
 TEST 	  ?=
 TESTBENCH ?=
@@ -14,17 +12,18 @@ WAVE 	  ?=
 MODULE ?= InorderAllocIssueUnit
 ifeq ($(MODULE), InorderAllocIssueUnit)
 	TEST := InorderAllocIssueUnit
-	TESTBENCH := SW/inorder_alloc_issue_unit_tb
+	TESTBENCH := inorder_alloc_issue_unit_tb
+	MODULES := $(RTLD)/Searcher.v
 	WAVE := inorder_alloc_issue_unit.vcd
 endif
 
-# CFLAGS	:= -Wall 
 VIGNOREW 	:= 
 VINCULDES	:= -I../../../rtl/ -I../../../rtl/core/SW/
 VFLAGS 		:= --trace --x-assign unique --x-initial unique $(VIGNOREW) $(VINCULDES)
 PFLAGS		:= -GREQ_LEN=4 -GGRANT_LEN=2
-IFLGAS		:=  -I../testbench/verilator 
-MACRO_FLAGS :=  -DFMT_HEADER_ONLY
+IFLGAS		:= -CFLAGS -I../../../../testbench/verilator -CFLAGS -I../../../../3rd-party/fmt/include
+LDFLAGS		:= -LDFLAGS ../../../../3rd-party/fmt/build/libfmt.a
+MACRO_FLAGS := -CFLAGS -DFMT_HEADER_ONLY
 
 
 .PHONY: sim wave clean format
@@ -34,7 +33,7 @@ cc:
 
 sim: 
 	@mkdir -p $(RTLOBJD)
-	@$(VERILATOR) $(VFLAGS) -cc $(RTLD)/$(TEST).v $(LDFLAGS) \
+	@$(VERILATOR) $(VFLAGS) -cc $(RTLD)/$(TEST).v $(LDFLAGS) $(MODULES) \
 		--public \
 		--exe $(TESTBENCHD)/$(TESTBENCH).cpp $(IFLGAS) $(MACRO_FLAGS) -Mdir $(RTLOBJD)
 	@make -C $(RTLOBJD) -f V$(TEST).mk V$(TEST)
@@ -42,4 +41,8 @@ sim:
 
 wave: sim
 	@gtkwave $(WAVE)
+
+clean:
+	@rm -rf build
+	@rm *.vcd
 
