feat(DP): add more write ports for rename unit

--- a/testbench/verilator/DP/Makefile
+++ b/testbench/verilator/DP/Makefile
@@ -10,7 +10,7 @@ TEST 	  ?=
 TESTBENCH ?=
 WAVE 	  ?=
 
-MODULE ?=ARF
+MODULE ?=RRF
 ifeq ($(MODULE), SRCOPRMANAGER)
 	TEST := SrcOprManager
 	TESTBENCH := DP/src_opr_manager_tb
