--- a/testbench/verilator/SW/Makefile
+++ b/testbench/verilator/SW/Makefile
@@ -31,7 +31,7 @@ VIGNOREW 	:=
 VINCULDES	:= -I../../../rtl/ -I../../../rtl/core/SW/
 VFLAGS 		:= --trace --x-assign unique --x-initial unique $(VIGNOREW) $(VINCULDES)
 PFLAGS		:= -GREQ_LEN=4 -GGRANT_LEN=2
-IFLGAS		:= -CFLAGS -I../../../../testbench/verilator -CFLAGS -I../../../../3rd-party/fmt/include
+IFLAGS		:= -CFLAGS -I../../../../testbench/verilator -CFLAGS -I../../../../3rd-party/fmt/include
 LDFLAGS		:= -LDFLAGS ../../../../3rd-party/fmt/build/libfmt.a
 MACRO_FLAGS := -CFLAGS -DFMT_HEADER_ONLY
 
@@ -45,7 +45,7 @@ sim:
 	@mkdir -p $(RTLOBJD)
 	@$(VERILATOR) $(VFLAGS) -cc $(RTLD)/$(TEST).v $(LDFLAGS) $(MODULES) \
 		--public \
-		--exe $(TESTBENCHD)/$(TESTBENCH).cpp $(IFLGAS) $(MACRO_FLAGS) -Mdir $(RTLOBJD)
+		--exe $(TESTBENCHD)/$(TESTBENCH).cpp $(IFLAGS) $(MACRO_FLAGS) -Mdir $(RTLOBJD)
 	@make -C $(RTLOBJD) -f V$(TEST).mk V$(TEST)
 	@./$(RTLOBJD)/V$(TEST) +verilator+rand+reset+2
 
