--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = 3rd-party/fmt
 	url = git@github.com:fmtlib/fmt.git
 
+[submodule "HeliosXSimulator"]
+	path = HeliosXSimulator
+	url = git@github.com:HeliosXCore/HeliosXSimulator.git
