--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "HeliosXSimulator"]
 	path = HeliosXSimulator
 	url = git@github.com:HeliosXCore/HeliosXSimulator.git
+[submodule "HeliosXEmulator"]
+	path = HeliosXEmulator
+	url = git@github.com:HeliosXCore/HeliosXEmulator.git
