--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,10 @@
 [submodule "3rd-party/fmt"]
 	path = 3rd-party/fmt
 	url = git@github.com:fmtlib/fmt.git
+
+[submodule "HeliosXSimulator"]
+	path = HeliosXSimulator
+	url = git@github.com:HeliosXCore/HeliosXSimulator.git
+[submodule "HeliosXEmulator"]
+	path = HeliosXEmulator
+	url = git@github.com:HeliosXCore/HeliosXEmulator.git
